--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-tqdm==4.65.0
-tweety_ns==0.9.9.5
+pandas==2.1.4
+protobuf==4.25.1
+psycopg2_binary==2.9.9
+pymongo==4.6.1
+python-dotenv==1.0.0
+Requests==2.31.0
+scikit_learn==1.3.2
+torch==2.1.2
+tqdm==4.66.1
+transformers==4.36.2
+tweety_ns==1.0
+Unidecode==1.3.7
